--- a/cv-application/src/index.css
+++ b/cv-application/src/index.css
@@ -4,64 +4,14 @@ body {
     padding: 0;
     border: 0;
     color: #927E73;
-}
-
-.main-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-
-}
-
-.resume-display {
-    display: flex;
-    flex-direction: row;
-    height: 90vh;
-    width: 50vw;
-    max-width: 1000px;
-    margin: 3vh 20px 20px 20px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border: solid red 1px;
-    background-color: aliceblue;
-}
-
-
-#form-container {
-    margin-top: 50px;
-}
-
-#header {
-    padding-bottom: 50px;
+    flex-direction: column;
+    align-items: center;
 }
 
 #form-container > * {
     margin: 5px 0 5px 40px;
     width: 100%;
     display: flex;
-    
-    
 }
 
-.left-side {
-    background-color: #FFFFFF;
-    /* border: solid red 1px; */
-}
-
-.right-side {
-    background-color: #F8EDE7;
-}
-
-.left-side, .right-side {
-    width: 100%;
-    padding: 50px 0 5px 80px;
-    display: flex;
-    flex-direction: column;
-    
-}
-
-#image {
-    width: 200px;
-    border-radius: 30px;
-    margin-bottom: 20px;
-    
-}
